plugins {
    id 'maven-publish'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.web', 'javafx.swing' ]
}

group = 'fr.litarvan'
version = '1.1.3'
archivesBaseName = 'openauth'

sourceCompatibility = 11
targetCompatibility = 11

compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
	implementation 'com.google.code.gson:gson:2.9.0'
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId group
            artifactId archivesBaseName
            version = version

            from components.java
        }
    }
}

task fatjar(type: Jar) {
    from {
        configurations.compileClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    with jar
}
